2003-03-23  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc1.c: Use new baud rate generator allocation functions.
	Merge SMC and SCC output functions.
	
	* src/cpm.c: Add new function to allocate and manage the baud rate
	generators.  Used by all serial drivers.

	* include/ppc8xx.h: Some common definitions moved here from various
	QUICC serial files.

	* cdl/hal_powerpc_quicc.cdl: Add interface for SCC4 (not implemented
	by any platform yet)

2003-03-20  Gary Thomas  <gary@mlbassoc.com>

	* src/cpm.c (_mpc8xx_allocBd): Improve "best guess" for intial DPRAM
	allocation to use a value which is likely not to conflict with old 
	versions of RedBoot.

2003-03-18  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc1.c (cyg_hal_sccx_init_channel): Update initialization
	for SCC2 - *CAUTION* not tested on actual hardware.

2003-03-06  Gary Thomas  <gary@mlbassoc.com>

	* src/cpm.c: Handle case where DPRAM allocation is unknown.
	
	* include/ppc8xx.h: Define limits of CPM/DPRAM space.

2003-03-05  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc1.c: Need to flush data cache because the serial
	driver may set use buffers in cacheable memory.  Without this,
	diag_printf() falls over if the serial driver is ever used.

	* src/cpm.c: New file with CPM/DPRAM support.

	* include/ppc8xx.h: 
	* cdl/hal_powerpc_quicc.cdl: Split out support for CPM/DPRAM.

2002-11-26  Gary Thomas  <gthomas@ecoscentric.com>

	* src/quicc_smc1.c: Initialize BD allocation point.  Note that it is
	different from when the CPM get's reset directly.  This is to allow
	sharing of the space between ROM (RedBoot) code and applications.

	* cdl/hal_powerpc_quicc.cdl: Move platform define here, where it belongs.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* src/quicc_smc1.c: Support any combination of SMC1/SMC2 and
	SCC1/SCC2/SCC3 [or at least lay foundation for it]

	* cdl/hal_powerpc_quicc.cdl: Add more controls over port layout.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>
